--- a/installer/Product.wxs
+++ b/installer/Product.wxs
@@ -11,6 +11,7 @@
     <Feature Id="Complete" Title="Telemetry Dashboard" Description="Telemetry Dashboard and Metafetching scripts." ConfigurableDirectory="INSTALLFOLDER" Level="1">
       <ComponentGroupRef Id="MainJSFiles" />
       <ComponentGroupRef Id="LibraryFiles" />
+      <ComponentGroupRef Id="NodeModulesComponentGroup"/>
     </Feature>
   </Product>
 
