adding running of custom properties

--- a/installer/Product.wxs
+++ b/installer/Product.wxs
@@ -30,6 +30,11 @@
     <UIRef Id="WixUI_InstallDir" />
     <WixVariable Id="WixUILicenseRtf" Value="License.rtf" />
     <WixVariable Id="WixUIDialogBmp" Value="dialog.bmp" />
+
+    <InstallExecuteSequence>
+      <Custom Action='IsRepositoryRunningAction' Before='InstallFiles' />
+      <Custom Action='ImportAppAction' After='InstallFiles' />
+    </InstallExecuteSequence>
   </Product>
 
   <Fragment>
