--- a/installer/ca.wxs
+++ b/installer/ca.wxs
@@ -7,6 +7,8 @@
     <CustomAction Id='ImportExtensionsAction' BinaryKey='CABin' DllEntry='ImportExtensions' Impersonate='no' Execute='deferred' Return='check'/>
     <CustomAction Id='SetInstallDirectoryForCreateAction' Property='CreateTasksAction' Value='InstallDir=[INSTALLFOLDER]' />
     <CustomAction Id='CreateTasksAction' BinaryKey='CABin' DllEntry='CreateTasks' Impersonate='no' Execute='deferred' Return='check'/>
+    <CustomAction Id='SetInstallDirectoryForCertsAction' Property='CopyCertsAction' Value='InstallDir=[INSTALLFOLDER]' />
+    <CustomAction Id='CopyCertsAction' BinaryKey='CABin' DllEntry='CopyCertificates' Impersonate='no' Execute='deferred' Return='check'/>
 
     <Binary Id='CABin' SourceFile='./CustomActions/bin/x64/Debug/CustomActions.CA.dll'/>
 	</Fragment>
