--- a/installer/ca.wxs
+++ b/installer/ca.wxs
@@ -9,6 +9,8 @@
     <CustomAction Id='CreateTasksAction' BinaryKey='CABin' DllEntry='CreateTasks' Impersonate='no' Execute='deferred' Return='check'/>
     <CustomAction Id='SetInstallDirectoryForCertsAction' Property='CopyCertsAction' Value='InstallDir=[INSTALLFOLDER]' />
     <CustomAction Id='CopyCertsAction' BinaryKey='CABin' DllEntry='CopyCertificates' Impersonate='no' Execute='deferred' Return='check'/>
+    <CustomAction Id='SetDirectoryForSetOutputDirAction' Property='SetOutputDirAction' Value='InstallDir=[INSTALLFOLDER]' />
+    <CustomAction Id='SetOutputDirAction' BinaryKey='CABin' DllEntry='SetOutputDir' Impersonate='no' Execute='deferred' Return='check'/>
 
     <Binary Id='CABin' SourceFile='./CustomActions/bin/x64/$(var.Configuration)/CustomActions.CA.dll'/>
 	</Fragment>
