--- a/installer/Product.wxs
+++ b/installer/Product.wxs
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <Product Id="*" Name="TelemetryDashboard" Language="1033" Version="1.0.4.0" Manufacturer="EA Americas"
+  <Product Id="*" Name="TelemetryDashboard" Language="1033" Version="2.0.0.0" Manufacturer="EA Americas"
            UpgradeCode="6827879d-8349-4430-b2cb-02e094803c2e" Codepage="1252">
     <Package Platform="x64" InstallerVersion="200" Compressed="yes" InstallPrivileges="elevated" InstallScope="perMachine" SummaryCodepage="1252" />
 
@@ -35,8 +35,7 @@
     <WixVariable Id="WixUIDialogBmp" Value="dialog.bmp" />
 
     <InstallExecuteSequence>
-      <Custom Action='SetInstallDirectoryForValidation' Before='CostInitialize' />
-      <Custom Action='ValidateInstallDir' After='SetInstallDirectoryForValidation' />
+      <Custom Action='ValidateInstallDir' Before='CostInitialize' />
       <Custom Action='IsRepositoryRunningAction' Before='InstallFiles' />
       <Custom Action='RemoveTasksAction' After='IsRepositoryRunningAction'>REMOVE="ALL"</Custom>
       <Custom Action='SetInstallDirectoryForCertsAction' After='InstallFiles'>NOT Installed</Custom>
@@ -67,14 +66,16 @@
         </Directory>
       </Directory>
         <Directory Id="INSTALLFOLDER" Name="TelemetryDashboard" >
-          <Directory Id="CERTSFOLDER" Name="certs" />
-          <Directory Id="CONFIGFOLDER" Name="config" />
+          <Directory Id="JSLIBRARYFOLDER" Name="MetadataGenerater" >
+            <Directory Id="CERTSFOLDER" Name="certs" />
+            <Directory Id="CONFIGFOLDER" Name="config" />
+          </Directory>
         </Directory>
     </Directory>
   </Fragment>
 
   <Fragment>
-    <ComponentGroup Id="MainJSFiles" Directory="INSTALLFOLDER">
+    <ComponentGroup Id="MainJSFiles" Directory="JSLIBRARYFOLDER">
       <Component Id="INSTALLDIR_comp" Guid="3b90a8f3-ebb2-4fa7-b9cb-b5ce9da24a63" Win64="yes">
         <CreateFolder />
         <RemoveFile Id="RemoveFilesFromAppDirectory" Name="*.*" On="uninstall" />
