--- a/installer/Product.wxs
+++ b/installer/Product.wxs
@@ -35,7 +35,7 @@
     <WixVariable Id="WixUIDialogBmp" Value="dialog.bmp" />
 
     <InstallExecuteSequence>
-      <Custom Action='ValidateInstallDir' Before='CostInitialize' />
+      <Custom Action='ValidateInstallDir' Before='CostInitialize'>(NOT Installed) OR (REINSTALL) OR (UPGRADINGPRODUCTCODE)</Custom>
       <Custom Action='IsRepositoryRunningAction' Before='InstallFiles' />
       <Custom Action='RemoveTasksAction' After='IsRepositoryRunningAction'>REMOVE="ALL"</Custom>
       <Custom Action='SetInstallDirectoryForCertsAction' After='InstallFiles'>NOT Installed</Custom>
