--- a/installer/ca.wxs
+++ b/installer/ca.wxs
@@ -6,7 +6,7 @@
     <CustomAction Id='RemoveTasksAction' BinaryKey='CABin' DllEntry='RemoveTasks' Impersonate='yes' Execute='deferred' Return='check'/>
     <CustomAction Id='ImportAppAction' BinaryKey='CABin' DllEntry='ImportApp' Impersonate='yes' Execute='deferred' Return='check'/>
     <CustomAction Id='SetInstallDirectoryForDataConnectionsAction' Property='CreateDataConnectionsAction' Value='InstallDir=[INSTALLFOLDER]' />
-    <CustomAction Id='CreateDataConnectionsAction' BinaryKey='CABin' DllEntry='CreateDataConnectionsAction' Impersonate='yes' Execute='deferred' Return='check'/>
+    <CustomAction Id='CreateDataConnectionsAction' BinaryKey='CABin' DllEntry='CreateDataConnections' Impersonate='yes' Execute='deferred' Return='check'/>
     <CustomAction Id='SetInstallDirectoryForTasksAction' Property='CreateTasksAction' Value='InstallDir=[INSTALLFOLDER]' />
     <CustomAction Id='CreateTasksAction' BinaryKey='CABin' DllEntry='CreateTasks' Impersonate='yes' Execute='deferred' Return='check'/>
     <CustomAction Id='SetInstallDirectoryForCertsAction' Property='CopyCertsAction' Value='InstallDir=[INSTALLFOLDER]' />
